# sumcheck-on-g

./: Cargo.toml  README.md
src/: errors.rs  main.rs  multilinear_group_polynomial.rs  multilinear_polynomial.rs  virtual_group_polynomial.rs  virtual_polynomial.rs  virtual_polynomial_g.rs
src/sumcheck/: mod.rs  prover.rs  structs.rs  verifier.rs
src/sumcheckg/: mod.rs  prover.rs  structs.rs  verifier.rs
src/utils/: hypercube.rs  mle.rs  mleg.rs  mod.rs  vecg.rs
